Adjusts Location header in Swagger and in rest/users file
